--- a/requirements.txt
+++ b/requirements.txt
@@ -13,12 +13,14 @@ dash==2.12.1
 prophet==1.1.4
 statsmodels==0.14.0
 xgboost==1.7.6
-tensorflow==2.13.0
+# Downgraded tensorflow to avoid typing-extensions conflict
+tensorflow==2.12.0
 
 # API
-fastapi==0.100.0
+# Downgraded FastAPI and pydantic for compatibility
+fastapi==0.95.2
 uvicorn==0.23.2
-pydantic==2.1.1
+pydantic==1.10.8
 
 # Utilities
 python-dotenv==1.0.0
@@ -26,3 +28,6 @@ joblib==1.3.1
 tqdm==4.65.0
 pytest==7.4.0
 loguru==0.7.0
+
+# Pin typing-extensions explicitly to a compatible version
+typing-extensions==4.5.0
