--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Data processing
 pandas==2.0.3
-numpy==1.24.3
+# Downgraded numpy to be compatible with tensorflow 2.12.0
+numpy==1.23.5
 scikit-learn==1.3.0
 
 # Visualization
