chore: add branch_protection.json to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -197,6 +197,9 @@ venv/
 ENV/
 .python-version
 
+# GitHub configuration
+branch_protection.json
+
 # Python compiled files
 __pycache__/
 *.py[cod]
