--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,6 +2,10 @@
 pytest==7.4.0
 pytest-cov==4.1.0
 pytest-mock==3.11.1
+pytest-dash==2.2.0
+selenium==4.11.0
+percy==2.0.2
+dash-bootstrap-components==1.4.1
 
 # Linting and formatting
 black==23.7.0
