--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,7 +2,7 @@
 pytest==7.4.0
 pytest-cov==4.1.0
 pytest-mock==3.11.1
-pytest-dash==2.2.0
+pytest-dash==2.1.2  # Latest version available
 selenium==4.11.0
 percy==2.0.2
 dash-bootstrap-components==1.4.1
