--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,15 @@ target/
 # Jupyter Notebook
 .ipynb_checkpoints
 
+# macOS
+.DS_Store
+._.DS_Store
+**/.DS_Store
+**/._.DS_Store
+
+# Strange file
+"\\"
+
 # IPython
 profile_default/
 ipython_config.py
