--- a/requirements.txt
+++ b/requirements.txt
@@ -33,5 +33,15 @@ tqdm==4.65.0
 pytest==7.4.0
 loguru==0.7.0
 
+# Security
+pyjwt==2.8.0
+bcrypt==4.0.1
+python-jose==3.3.0
+passlib==1.7.4
+cryptography==41.0.5
+
+# Rate limiting
+slowapi==0.1.8
+
 # Pin typing-extensions explicitly to a compatible version
 typing-extensions==4.5.0
