fix(ci): skip deployment verification tests during CI
Add pytestmark to skip deployment verification tests during normal CI runs.
These tests are designed to run only when explicitly enabled in the CD
pipeline with the DEPLOYMENT_VERIFICATION environment variable.

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -145,6 +145,7 @@ jobs:
           export DASHBOARD_BASE_URL="https://dashboard-staging.supply-chain-forecaster.example.com"
           export DEPLOYMENT_ENV="staging"
           export API_KEY="${{ secrets.API_KEY_STAGING }}"
+          export DEPLOYMENT_VERIFICATION="true"
           
           # Install test dependencies
           pip install pytest requests
@@ -210,6 +211,7 @@ jobs:
           export DASHBOARD_BASE_URL="https://supply-chain-forecaster.example.com"
           export DEPLOYMENT_ENV="production"
           export API_KEY="${{ secrets.API_KEY_PRODUCTION }}"
+          export DEPLOYMENT_VERIFICATION="true"
           
           # Install test dependencies
           pip install pytest requests
