fix(cd): update Kubernetes manifests for CD pipeline
Update image references in Kubernetes manifests to use the format expected
by the CD pipeline. Update k8s README with CD deployment information and
instructions for both automated and manual deployment.

--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: api
-        image: ${DOCKER_REGISTRY}/supply-chain-forecaster-api:${VERSION}
+        image: ghcr.io/coop-columb/supply-chain-forecaster-api:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8000
